SSB-0029: add room as response info to chat-messages api
